--- a/CandyCrush/build.gradle
+++ b/CandyCrush/build.gradle
@@ -15,6 +15,7 @@ dependencies {
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
     testImplementation("org.assertj:assertj-core:3.27.2")
+    testImplementation('org.ow2.asm:asm-tree:9.8')
 }
 
 test {
